# student_management_system_backend

./: .gitignore  README.md  app.py  ca-certificate.pem  pyproject.toml  requirements.txt
src/: __init__.py
src/models/: admin.py  attendance.py  student.py
src/routes/: attendance.py  auth.py  student.py  teacher.py
src/schemas/: attendance_schema.py  auth_schema.py  student_scema.py  teachers_schema.py
